Fixed My Rating's page's issue with overlapping club names

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,10 +31,6 @@
   grid-template-columns: 33.3% 33.3% 33.3%;
 }
 
-.home-col {
-  align-items: center;
-}
-
 .home-page-h1 {
   padding: 20px;
   margin-top: 0px;
@@ -63,7 +59,6 @@
 .home-club-container {
   margin: 2.5%;
   background-color: gray;
-
 }
 
 .home-ratings-column {
